# Keit-Preparation

./: .gitignore  README.md
PDF2/: package-lock.json  package.json  tsconfig.json
PDF2/dummy/: adapter.ts  workNodeManager.ts
PDF2/src/: index.ts
PDF2/src/operation/: app.ts
PDF2/src/service/: adapter.ts  fileManager.ts  jobManager.ts  (+4 more)
PDFC/: README.md  package-lock.json  package.json  tsconfig.json
PDFC/dummy/: taskManager-d.js  taskManager-d.ts
PDFC/exe/: test.py
PDFC/src/: config.ts  index.ts  setting.json
document/: README.md  assume.txt  test-api.md
etc/PDF_Converter/: .env  README.md  main.py  pyproject.toml  requirements.txt  set.py
etc/PDF_Converter/etc/: data.json
etc/PDF_Converter/src/data/: __init__.py  data.py
etc/PDF_Converter/src/pdfc/: __init__.py  converter.py  file.py
etc/PDF_Converter/src/utils/: __init__.py  create_directory.py  gen_py_killer.py
exes/hwp/: ftptest.py  main.py  pyproject.toml  settings.py  test.py  test2.py  test3.py  test4.py
exes/hwp/data/file/: data.json
exes/hwp/data/result/: hello_test.hwp  hello_test2.hwp  report_data.json  test.json
exes/hwp/data/template/: hello.hwp  hi.hwp
exes/hwp/dto/: __init__.py  hwp_result_dto.py  input_order_dto.py
exes/hwp/hwp/: __init__.py  hwp.py  hwp_gen.py
exes/hwp/utils/: __init__.py  filesystem.py  redis_cli.py
polling/: index easy.js  index.js  main.js  package-lock.json  package.json  readme.md
polling/resources/: .env  config.js
polling/service/: adaptor.js  findEmptyWorkNode.js  init.js  job.js
polling/utils/: cursor.js  timeout.js  workerNode.js
(+66 files in other folders)
