[tool.poetry]
name = "hwp"
version = "0.1.0"
description = ""
authors = ["Flzomb <spark3840@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
redis = "^5.0.1"
pydantic = "^2.6.1"
pywin32 = "^306"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
